erDiagram

USER {
    string user_id PK
    int role_id FK
    string full_name
    string email
    string phone_number
    string department
    string account_status
}

ROLE {
        int role_id PK
        string role_name
}

SPACE {
    string space_code PK
    string space_name
    string space_type
    string building
    int floor
    string room_number
    int capacity
    string current_status
}

FACILITY {
    string facility_id PK
    string space_code FK
    string facility_name
    string description
}

BOOKING_REQUEST {
    string booking_id PK
    string user_id FK
    string space_code FK
    datetime start_time
    datetime end_time
    string purpose
    int expected_participants
    string booking_type
    string status[[read_only]]
}

BOOKING_DECISION {
    string decision_id PK
    string booking_id FK
    boolean is_approved
    boolean is_automatic
    string decided_by_staff FK
    string decision_reason
    datetime decision_time
}

USAGE_SESSION {
    string session_id PK
    string decision_id FK
    string checked_in_by_staff FK
    string completed_by_staff FK
    datetime start_time
    datetime end_time
    string initial_condition
    string final_condition
    string usage_note
}

MAINTENANCE_RECORD {
    string maintenance_id PK
    string space_code FK
    string report_user FK
    string assigned_staff FK
    string problem_description
    datetime start_time
    datetime end_time
    string status
    string result_note
    string impact_level
}

ADVISORY_ACKNOWLEDGEMENT {
        string booking_id PK,FK
        string maintenance_id PK,FK
        datetime acknowledge_time
}

SPACE_USAGE_POLICY {
        string space_code PK,FK
        int role_id PK,FK
}

%% Relationships

BOOKING_DECISION ||--o| USAGE_SESSION : creates

BOOKING_REQUEST ||--o{ ADVISORY_ACKNOWLEDGEMENT : has
BOOKING_REQUEST ||--o| BOOKING_DECISION : requires

MAINTENANCE_RECORD ||--o{ ADVISORY_ACKNOWLEDGEMENT : has

ROLE ||--o{ SPACE_USAGE_POLICY : allowed_in
ROLE ||--o{ USER : assigned_to

SPACE ||--o{ BOOKING_REQUEST : receives
SPACE ||--o{ FACILITY : contains
SPACE ||--o{ MAINTENANCE_RECORD : has
SPACE ||--o{ SPACE_USAGE_POLICY : has

USER ||--o{ BOOKING_DECISION : staff_decides
USER ||--o{ BOOKING_REQUEST : submits
USER ||--o{ MAINTENANCE_RECORD : reports
USER ||--o{ MAINTENANCE_RECORD : assigned_staff
USER ||--o{ USAGE_SESSION : staff_checks_in
USER ||--o{ USAGE_SESSION : staff_completes